follow change in lsp-types

--- a/ghcide/ghcide.cabal
+++ b/ghcide/ghcide.cabal
@@ -60,7 +60,7 @@ library
         hls-plugin-api ^>= 1.1.0.0,
         lens,
         hiedb == 0.3.0.*,
-        lsp-types == 1.2.*,
+        lsp-types >= 1.2 < 1.4,
         lsp == 1.2.*,
         mtl,
         network-uri,
@@ -343,7 +343,7 @@ test-suite ghcide-tests
         hls-plugin-api,
         network-uri,
         lens,
-        lsp-test == 0.14.0.0,
+        lsp-test ^>= 0.14,
         optparse-applicative,
         process,
         QuickCheck,
@@ -403,7 +403,7 @@ executable ghcide-bench
         extra,
         filepath,
         ghcide,
-        lsp-test == 0.14.0.0,
+        lsp-test,
         optparse-applicative,
         process,
         safe-exceptions,
