--- a/hls-test-utils/hls-test-utils.cabal
+++ b/hls-test-utils/hls-test-utils.cabal
@@ -48,8 +48,8 @@ library
     , hspec-core
     , lens
     , lsp                     ^>=1.2
-    , lsp-test                ==0.14.0.0
-    , lsp-types               ^>=1.2
+    , lsp-test                ^>=0.14
+    , lsp-types               >=1.2 && < 1.4
     , tasty
     , tasty-expected-failure
     , tasty-golden
